...
  return (
    <Screen
      preset="auto"
      contentContainerStyle={themed($screenContentContainer)}
      safeAreaEdges={["top", "bottom"]}
    >
      <Text text="Verify Email" preset="heading" style={themed($heading)} />
      <Text
        text={`We sent a verification code to ${email}`}
        preset="subheading"
        style={themed($subheading)}
      />
      <Text
...
